fixate maven surefire version and improve test output