@@ -53,11 +53,13 @@
 		<mockito.version>4.5.1</mockito.version>
 		<!-- build dependencies -->
 		<maven-compiler.version>3.10.1</maven-compiler.version>
+		<maven-surefire.version>3.2.5</maven-surefire.version>
 		<maven-jar.version>3.2.2</maven-jar.version>
 		<maven-dep.version>3.3.0</maven-dep.version>
 		<exec-maven.version>3.0.0</exec-maven.version>
 		<maven-assembly.version>3.6.0</maven-assembly.version>
 		<itchy-replace.version>1.3</itchy-replace.version>
+		<junit-tree-reporter.version>1.2.1</junit-tree-reporter.version>
 	</properties>
 
 	<dependencies>
@@ -155,6 +157,11 @@
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${maven-surefire.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
 					<version>${maven-jar.version}</version>
 				</plugin>
@@ -188,7 +195,27 @@
 					<release>17</release>
 				</configuration>
 			</plugin>
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<dependencies>
+					<dependency>
+						<groupId>me.fabriciorby</groupId>
+						<artifactId>maven-surefire-junit5-tree-reporter</artifactId>
+						<version>${junit-tree-reporter.version}</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<argLine>-XX:+EnableDynamicAgentLoading</argLine>
+					<reportFormat>plain</reportFormat>
+					<consoleOutputReporter>
+						<disable>true</disable>
+					</consoleOutputReporter>
+					<statelessTestsetInfoReporter
+							implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporter">
+					</statelessTestsetInfoReporter>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
